<resources>
    <string name="app_name">Kelec</string>
    <string name="appwidget_text">WIDGET</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Regroupe les informations de votre Renault E-Tech sur votre écran d\'accueil</string>
    <string name="widget_image_description">Car logo manufacturer</string>
    <string name="widget_time_remaining_image_description">Remaining time image</string>
    <string name="widget_end_time_image_description">End time image</string>
    <string name="widget_car_name">RENAULT</string>
    <string name="widget_unique_text">CHARGEMENT</string>
    <string name="widget_battery_level">50</string>
    <string name="widget_percent">%</string>
    <string name="widget_charging_status">EN CHARGE | </string>
    <string name="widget_battery_autonomy">77 km</string>
    <string name="widget_last_refresh">22:56</string>
    <string name="time_remaining_text">5h38</string>
    <string name="end_time_text">04:34</string>
    <string name="no_car_added">Vous devez d\'abord sélectionner une voiture sur l\'appli</string>
    <string name="not_yet_logged_in">Vous devez d\'abord vous connecter sur l\'appli</string>
    <string name="widget_configure_title">Sélectionnez une voiture</string>
    <string name="widget_configure_subtitle">Choisissez la voiture à afficher dans ce widget</string>
    <string name="scheduled_charge_status">CHARGE PLANIFIÉE | </string>
    <string name="ended_charge_status">CHARGE TERMINÉE | </string>
    <string name="charging_status">EN CHARGE | </string>
    <string name="not_charging_status">NE CHARGE PAS | </string>
</resources>
