<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    style="@style/Widget.Kelec.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_widget_background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/AppTheme.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/main_widget_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/car_manufacturer_logo"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/widget_image_description"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/renault_logo"
                 />

            <TextView
                android:id="@+id/car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/widget_car_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor = "?android:textColorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/battery_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/widget_battery_level"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percent_fixed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/widget_percent"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#A5A5A5"
                android:textSize="16sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/charging_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="#27CD41"

            />

        <ProgressBar
            android:id="@+id/not_charging_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:max="100"
            android:progress="50"
            android:progressTint="#007AFF"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/charging_status_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/widget_charging_status"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/battery_autonomy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/widget_battery_autonomy"
                        android:textColor="#A5A5A5"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/charging_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/time_remaining_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/widget_time_remaining_image_description"
                        android:src="@drawable/ic_baseline_hourglass_top_24" />

                    <TextView
                        android:id="@+id/time_remaining_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_remaining_text"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/end_time_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/widget_end_time_image_description"
                        android:src="@drawable/ic_baseline_battery_full_24"/>

                    <TextView
                        android:id="@+id/end_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time_text"
                        android:textColor="#A5A5A5"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/last_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/refresh_24"
                    android:gravity="center_vertical"
                    android:maxHeight="48dp"
                    android:text="Button" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>